# mangomgr

./: README.md  pyproject.toml
.github/workflows/: publish.yml
mangomgr/: __init__.py  mango.py
