[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mangomgr"
version = "0.1.1"
description = "A lightweight local code manager."
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name="Lasagna Mycloset" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
mangomgr = "mangomgr.mango:main"
